--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "digitalandsolution",
+  "homepage": "https://wasalas893.github.io/digitalandsolution",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -21,6 +23,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^5.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
